# calender_agent

./: .gitignore  README.md  agent.py  auth.py  calendar_tools.py  credentials.json  demo.py  main.py  pyproject.toml  requirements.txt  test.py  test_timezone.py
data/: calendar_agent_memory.db  calendar_agent_sessions.db  facilities.json  policies.json  users.json  users_example.json
docs/: advanced_agent_concepts.md  agent_diagrams.md  architecture.md  slide-deck.md  sub_agent_ideas.md
examples/: README.md  reasoning_demo.py  scheduler_reasoning_demo.py
scheduler_agent/: agent.py  auth.py  calendar_tools.py  config.py  data_manager.py  datetime_utils.py  email_utils.py  reasoning_engine.py  session_memory.py
scheduler_agent/parallel_execution/: README.md  __init__.py  availability_checker.py  parallel_coordinator.py  policy_engine.py  validation_agent.py
scheduler_agent/sub_agents/: __init__.py  availability_agent.py  creator_agent.py  facility_agent.py  validator_agent.py
scheduler_agent/tools/: __init__.py  availability.py  events.py  facilities.py  holidays.py  search.py  validation.py
tests/: README.md  __init__.py  conftest.py  test_adk_sub_agents.py  test_calendar_creation.py  test_calendar_tools.py  test_data_manager.py  test_email_utils.py  test_holidays.py  test_parallel_availability.py  test_persistence.py  test_reasoning_engine.py  test_timezone.py  test_timezone_logic.py  test_validation_stage2.py
